Update catalog service security tests